--- a/css/styles.css
+++ b/css/styles.css
@@ -684,6 +684,7 @@ a:focus .text-overlay {
     transform: translate(-50%, -50%);
     width: 528px;
     height: 581px;
+    padding: 40px;
     background-color: var(--primary-white-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -711,6 +712,81 @@ a:focus .text-overlay {
     border: 1px solid rgba(0, 0, 0, 0.1);
     cursor: pointer;
 }
+.form {
+    display: flex;
+    flex-direction: column;
+}
+.form-field {
+    position: relative;
+    display: block;
+    margin-bottom: 20px;
+
+}
+
+.form-lable {
+    display: block;
+    margin-bottom: 4px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: #757575;
+    /* position: absolute;
+    top: 50%;
+    left: 30px;
+    transform: translateY(-50%); */
+
+}
+
+.form-input {
+    width: 100%;
+    height: 40px;
+    margin: 0;
+    padding: 10px 20px;
+    font: inherit;
+    border-radius: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+
+}
+.form-title {
+    margin-bottom: 12px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+}
+.form-icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    margin-top: 11px;
+    transform: translateY(-50%);
+    
+}
+.comment {
+    width: 100%;
+    height: 120px;
+    padding: 12px 16px;
+    margin-bottom: 20px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+.policy-label {
+    display: flex;
+    align-items: center;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.7;
+    
+    color: #757575;
+}
+
 /* Button */
 .button {
     display: inline-block;
@@ -777,4 +853,13 @@ a:focus .text-overlay {
     color: var(--primary-white-color);
     background-color: var(--accent-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.form-button {
+    padding: 10px 52px;
+    margin-top: 30px;
+    color: var(--primary-white-color);
+    background-color: var(--accent-color);
+    transition: background-color var(--transition-duration-function);
+
 }
