--- a/css/styles.css
+++ b/css/styles.css
@@ -856,6 +856,7 @@ a:focus .text-overlay {
 }
 
 .form-button {
+    display: block;
     padding: 10px 52px;
     margin-top: 30px;
     color: var(--primary-white-color);
