--- a/css/styles.css
+++ b/css/styles.css
@@ -683,7 +683,7 @@ a:focus .text-overlay {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 528px;
-    height: 581px;
+   
     padding: 40px;
     background-color: var(--primary-white-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -751,6 +751,7 @@ a:focus .text-overlay {
     padding: 10px 20px;
     padding-left: 42px;
     font: inherit;
+    font-size: 12px;
     border-radius: 4px;
     border: 1px solid rgba(33, 33, 33, 0.2);
 
@@ -797,6 +798,7 @@ a:focus .text-overlay {
     height: 120px;
     padding: 12px 16px;
     margin-bottom: 20px;
+    font-size: 12px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     resize: none;
@@ -829,6 +831,7 @@ a:focus .text-overlay {
 }
 .contract {
     color: var(--accent-color);
+    text-decoration: underline;
 }
 .form-title {
     margin-bottom: 20px;
@@ -894,10 +897,15 @@ a:focus .text-overlay {
     display: none;
 }
 .checkbox-input:checked + .checkbox-icon-on {
-    background-color : #188ce8;
+    background-color : var(--primary-button-focus);
+    border-color: var(--primary-button-focus);
 }
 .checkbox-input:checked + .checkbox-icon-on .checkbox-icon-own-on {
     display: block;
+}
+
+.checkbox-input:focus +.checkbox-icon-on {
+    border-color: var(--primary-button-focus);
 }
 
 /* Button */
@@ -987,8 +995,19 @@ a:focus .text-overlay {
     margin-top: 30px;
     color: var(--primary-white-color);
     background-color: var(--accent-color);
-    transition: background-color var(--transition-duration-function);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+    transition: background-color var(--transition-duration-function), box-shadow var(--transition-duration-function);
 }
+
+.form-button:hover,
+.form-button:focus,
+.form-button-modal:hover,
+.form-button-modal:focus {
+    color: var(--primary-white-color);
+    background-color: var(--primary-button-focus);
+}
+
 .send-icon {
     margin-left: 10px;
 }
