--- a/css/styles.css
+++ b/css/styles.css
@@ -769,13 +769,17 @@ a:focus .text-overlay {
     letter-spacing: 0.03em;
     color: #212121;
 }
-
+.form-container {
+    position: relative;
+    display: block;
+}
 .form-icon {
     position: absolute;
-    top: 45%;
+    
+    top: 50%;
     left: 12px;
-    margin-top: 11px;
-    transform: translateY(-45%);
+    
+    transform: translateY(-50%);
 
     transition: fill var(--transition-duration-function);
     
@@ -789,10 +793,7 @@ a:focus .text-overlay {
 .form-field:focus-within > .form-icon {
     fill: var(--accent-color);
 }
-/* .form-field:focus-within > .form-input {
-    border-radius: 4px;
-    border: 1px solid var(--accent-color);
-} */
+
 .comment {
     width: 100%;
     height: 120px;
